--- a/server/public/css/layout.css
+++ b/server/public/css/layout.css
@@ -87,7 +87,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     min-height: 0;
     overflow-y: auto;
 }
